# semantic-search

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js
Postman Collections/: semantic-search.json.json
docker/celery/: Dockerfile
docker/fastapi/: Dockerfile
public/: index.html
semantic_search/: __init__.py  __main__.py  app.py  embedding_gen.py  main.py  vector_database.py
src/: App.tsx  index.css
src/components/: LeftPanel.tsx  MiddlePanel.tsx  ProgressBar.tsx  RightPanel.tsx
