[tool.poetry]
name = "semantic-search"
version = "0.1.0"
description = ""
authors = ["pratyushmohit <pratyushmohit226@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
qdrant-client = "^1.6.0"
sentence-transformers = "^2.2.2"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pandas = "^2.1.1"
numpy = "^1.26.0"
scikit-learn = "^1.3.1"
plotly = "^5.17.0"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
